<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IndoorLocalizer</string>
    <string name="action_settings">Settings</string>

    <string name="hugo_logo">Application Logo</string>
    <string name="WiFi_status_text">For a good localization Wifi must be enabled</string>
    <string name="localize_button_text">Get Location</string>
    <string name="title_activity_retrieve_data">Retrieve Data</string>
    <string name="title_activity_wifi_scanner">wifiScanner</string>
    <!-- WiFi Label -->
    <string name="scan_for_new_datas"><![CDATA[No WiFi found, please tap Menu>Scan for get some results]]></string>

    <!-- Patterns -->
    <string name="map_value_pattern">Map : %1$s</string>
    <string name="rp_value_pattern">RP : %1$d %2$s</string>
    <string name="ssid_value_pattern">SSID : %1$s</string>
    <string name="bssid_value_pattern">BSSID : %1$s</string>
    <string name="capabilities_value_pattern">Capabilities : %1$s</string>
    <string name="level_value_pattern">Level : %1$d</string>
    <string name="frequency_value_pattern">Frequency : %1$d Hz</string>
    <string name="timestamp_value_pattern">Timestamp : %1$d</string>
    <string name="hits_value_pattern">Hits : %1$d</string>
    <string name="option_description_pattern">%1$s</string>
    <string name="option_name_pattern">%1$s</string>
    <string name="found_rp_name_value_pattern">Name : %1$s</string>
    <string name="found_rp_id_value_pattern">ID : %1$d</string>
    <!-- Show data labels -->
    <string name="update_list_message">Update List</string>
    <string name="title_activity_simple_tracker">Simple Tracker</string>
    <string name="search_wifi_message">Searching for some networks near your position…</string>
    <string name="empty_list_message">No WiFi found in the database.</string>
    <string name="title_activity_save_data">Save Data</string>

    <!-- Button Text -->
    <string name="scan_button_text">Scan!</string>
    <!-- Placeholders -->
    <string name="placeholder_list_item_map">Map: Stiva\'s home</string>
    <string name="placeholder_list_item_rp">RP: -1 Bathroom</string>
    <string name="placeholder_list_item_ssid">SSID: Casa Stivani</string>
    <string name="placeholder_rp_number">RP: -1</string>
    <string name="placeholder_bssid">BSSID : 23:00:bb:22:00:11</string>
    <string name="placeholder_capabilities">Capabilities: [WPA-PSK][WPA2-TKIP][WEP]</string>
    <string name="placeholder_level">Level : 4</string>
    <string name="placeholder_frequency">Frequency : 3000Hz</string>
    <string name="placeholder_timestamp">Timestamp : 74495686</string>
    <string name="placeholder_hits">Hits : 0</string>
    <string name="save_fingerprint_option_label">Save fingerprint!</string>
    <string name="get_fingerprint_option_label">Get Saved AP</string>
    <string name="title_activity_list_aps">ListAps</string>
    <string name="refresh_list_option_label">Refresh</string>
    <string name="title_activity_data_retriever">DataRetriever</string>
    <string name="create_rp_option_label">Evaluate a Reference Point here</string>
    <string name="stop_rp_button_label">Stop</string>
    <string name="rp_id_label">Insert a valid RP name for your detection</string>
    <string name="placeholder_map_name_editText">Map Name (e.g. Home)</string>
    <string name="data_retrieving_button_text">Create</string>
    <string name="number_hint">e.g. 4</string>
    <string name="placeholder_option_name">Option 1</string>
    <string name="placeholder_option_description">Description, lore ipsum bla bla</string>
    <string name="option_icon_description">Icon for option item</string>
    <string name="title_activity_show_wifi">ShowWifi</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save_map_name">Save</string>
    <string name="dialog_save_map_name">Insert map name</string>
    <string name="map_name_dialog">Insert Map Name</string>
    <string name="title_activity_show_saved_maps">ShowSavedMaps</string>
    <string name="image_button_descriptor">Image Button</string>
    <string name="placeholder_map_name">Map Name</string>
    <string name="button_image_upload_text">Upload an image to use it as a map</string>
    <string name="create_map_content_description">Create Map</string>
    <string name="map_image_preview">Map preview</string>
    <string name="delete_map_message">Are you sure that you want to delete this map?</string>
    <string name="delete_map_title">Delete Map</string>
    <string name="option_map_dialog">Choose an option</string>
    <string name="localize_content_description">Localize user in a specific map</string>
    <string name="title_activity_localization">Localization</string>
    <string name="rp_name_hint">e.g. Bedroom</string>
    <string name="title_activity_show_wifi_list">ShowWifiList</string>
    <string name="retrieve_image_content_description">Retrieve function menu</string>
    <string name="empty_map_list_message">No maps found in db</string>
    <string name="map_spinner_chooser_text_view">Choose the map that you want to use for localization</string>
    <string name="wifi_toggle_info">To localize you inside the map wifi must be enabled</string>
    <string name="preference_summary_connection">Connection status settings</string>
    <string name="preference_title_connection">Connection</string>
    <string name="switch_wifi_title_preference">WiFi</string>
    <string name="environment_variables_summary">Environment variables</string>
    <string name="environment_variables_title">Settings</string>
    <string name="tolerance_summary_pref">1–100%</string>
    <string name="tolerance_title_pref">Select the tolerance value that you want to use for cluster matching</string>
    <string name="scan_number_summary_pref">1–100</string>
    <string name="scan_number_title_pref">Number of RP to evaluate</string>
    <string name="duration_ms_summary_pref">1–50000</string>
    <string name="duration_ms_title_pref">Interval between each scan</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_online_settings">Settings</string>
    <string name="title_activity_position_evaluator">Position Evaluator</string>
    <string name="placeholder_rp_name">Name: Bathroom</string>
    <string name="unable_find_message">Unable to localize you in this map</string>
    <string name="scan_result_content_description">Scan Result</string>
    <string name="create_new_map"><![CDATA[<Create a new Map>]]></string>
    <string name="insert_map_name">Insert Map Name</string>
    <string name="no_rp_name_selected_error">You\'ve to select a valid name for RP</string>
    <string name="pick_image_message">Select Picture</string>
    <string name="dialog_scan_map_title">Generating Reference point …</string>
    <string name="dialog_scan_map_message">Scan in progress …</string>
    <string name="scanning_aborted_message">Scanning aborted by the user</string>
    <string name="no_service_stop">No service to stop</string>
    <string name="evaluating_euclidean_distance_message">evaluating euclidean difference</string>
    <string name="enabling_wifi_message">wifi is disabled… making it enabled</string>
    <string name="localizing_dialog_title">Localizing in map %1$s… </string>
    <string name="notification_successful_localization">Localized in RP: %1$s number: %2$d</string>
    <string name="found_rp_value_pattern">RP: %1$d</string>
    <string name="unable_localize_message">Unable to localize you in this map</string>
    <string name="localized_global_min_placeholder">Difference with RP: 100</string>
    <string name="localized_min_value_pattern">Difference with RP: %1$f</string>
</resources>
