<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:summary="@string/preference_summary_connection"
        android:title="@string/preference_title_conncetion" >
        <SwitchPreference
            android:key="wifi_toggle"
            android:summary="@string/wifi_toggle_info"
            android:title="@string/switch_wifi_title_preference"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/environment_variables_summary"
        android:title="@string/environment_variables_title" >
        <EditTextPreference
            android:key="tolerance"
            android:inputType="text"
            android:defaultValue="30.0"
            android:summary="@string/tolerance_summary_pref"
            android:title="@string/tolerance_title_pref"/>
        <EditTextPreference
            android:key="scan_number"
            android:inputType="number"
            android:numeric="integer"
            android:defaultValue="15"
            android:summary="@string/scan_number_summary_pref"
            android:title="@string/scan_number_title_pref"/>
        <EditTextPreference
            android:key="duration_ms"
            android:numeric="integer"
            android:inputType="number"
            android:defaultValue="10000"
            android:summary="@string/duration_ms_summary_pref"
            android:title="@string/duration_ms_title_pref"/>
    </PreferenceCategory>
</PreferenceScreen>
