<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.common.wifiScanner" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_fingerprint_option"
        android:title="@string/save_fingerprint_option_label"/>
    <item
        android:id="@+id/get_stored_fingerprint_option"
        android:title="@string/get_fingerprint_option_label"/>
    <item
        android:id="@+id/create_rp_option"
        android:title="@string/create_rp_option_label"/>
    <item
        android:id="@+id/refresh_list_option"
        android:title="@string/refresh_list_option_label"/>
</menu>
