<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        style="@style/WifiItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_list_item_map"
        android:id="@+id/map"
        android:layout_gravity="center"/>
    <TextView
        style="@style/WifiItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_list_item_rp"
        android:id="@+id/reference_point"
        android:layout_gravity="center"/>
    <TextView
        style="@style/WifiItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_list_item_ssid"
        android:id="@+id/ssid"
        android:layout_gravity="center"/>

    <TextView
        style="@style/WifiItemData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_bssid"
        android:id="@+id/bssid"/>

    <TextView
        style="@style/WifiItemData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_capabilities"
        android:id="@+id/capabilities"/>

    <TextView
        style="@style/WifiItemData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_level"
        android:id="@+id/level"/>
    <TextView
        style="@style/WifiItemData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_frequency"
        android:id="@+id/frequency"/>
    <TextView
        style="@style/WifiItemData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_hits"
        android:id="@+id/hits"/>
</LinearLayout>