<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.offline.DataRetriever"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:orientation="horizontal">

    <Button
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/data_retrieving_button_text"
        android:id="@+id/data_retrieving_button"
        android:layout_marginTop="250sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rp_id_label"
        android:id="@+id/textView"

        android:layout_marginTop="130sp"/>

    <Button
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/stop_rp_button_label"
        android:id="@+id/stop_rp_button"
        android:layout_marginTop="250sp"
        android:layout_marginRight="200sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/map_name_editText"
        android:hint="@string/placeholder_map_name_editText"
        android:layout_marginBottom="120sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/number_hint"
        android:ems="10"
        android:id="@+id/rp_id_editText"
        android:layout_marginTop="160sp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_map_title"
        android:src="@drawable/map_create_title"
        android:background="@color/dat_yellow"
        android:contentDescription="@string/create_map_content_description" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/map_image_preview"
        android:layout_marginTop="21sp"
        android:contentDescription="@string/map_image_preview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_image_upload_text"
        android:id="@+id/upload_image_button"
        android:layout_marginBottom="60sp"/>

</LinearLayout>