<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_list_item_ssid"
        android:id="@+id/list_item_ssid"
        android:textColor="@color/white"
        android:background="@color/dark_gray"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/placeholder_bssid"
        android:id="@+id/list_item_bssid"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_capabilities"
        android:textColor="@color/white"
        android:id="@+id/list_item_capabilities"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/placeholder_level"
        android:id="@+id/list_item_level"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/placeholder_frequency"
        android:id="@+id/list_item_frequency"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/placeholder_timestamp"
        android:id="@+id/list_item_timestamp"
        android:layout_gravity="center"/>


</LinearLayout>