<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activity.offline.DataRetriever">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_map_title"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/map_create_title"
            android:background="@color/dat_yellow"
            android:contentDescription="@string/create_map_content_description"
            android:padding="@dimen/text_padding_default"/>


        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/map_chooser_retrieve"
            android:padding="@dimen/text_padding_default"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/map_image_preview"
            android:src="@drawable/map_default_icon"
            android:layout_gravity="center"
            android:padding="@dimen/text_padding_default"
            android:contentDescription="@string/map_image_preview"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rp_id_label"
            android:id="@+id/rp_text_view"
            android:padding="@dimen/text_padding_default"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/rp_name_hint"
            android:ems="10"
            android:id="@+id/rp_name_editText"
            android:layout_gravity="center_horizontal|bottom"
            android:padding="@dimen/text_padding_default"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/data_retrieving_button_text"
                android:id="@+id/data_retrieving_button" />

            <Button
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/stop_rp_button_label"
                android:id="@+id/stop_rp_button"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>