<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/map_name_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/map_name_dialog" />
    <EditText
        android:id="@+id/map_name_editText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/placeholder_map_name_editText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_image_upload_text"
        android:id="@+id/button_image_upload" />

</LinearLayout>