<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option_name"
        android:text="@string/placeholder_option_name"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/option_icon_element" />

    <ImageView
        android:layout_height="60sp"
        android:layout_width="60sp"
        android:id="@+id/option_icon_element"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/option_icon_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option_description"
        android:text="@string/placeholder_option_description"
        android:layout_alignBottom="@+id/option_icon_element"
        android:layout_toRightOf="@+id/option_icon_element"
        android:layout_below="@+id/option_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>