<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.offline.DataRetriever">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_map_title"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/map_create_title"
            android:background="@color/dat_yellow"
            android:contentDescription="@string/create_map_content_description" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:id="@+id/map_image_preview"
            android:src="@drawable/map_default_icon"
            android:layout_gravity="center"
            android:contentDescription="@string/map_image_preview"
            android:layout_below="@+id/rp_name_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/data_retrieving_button_text"
            android:id="@+id/data_retrieving_button"
            android:layout_gravity="left|bottom"
            android:layout_below="@+id/map_image_preview"
            android:layout_marginTop="20sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/rp_name_hint"
            android:ems="10"
            android:id="@+id/rp_name_editText"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/rp_text_view"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rp_id_label"
            android:id="@+id/rp_text_view"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/map_chooser_retrieve"
            android:layout_centerHorizontal="true" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/stop_rp_button_label"
            android:layout_marginTop="20sp"
            android:id="@+id/stop_rp_button"
            android:layout_gravity="right|bottom"
            android:layout_below="@+id/map_image_preview"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/map_chooser_retrieve"
            android:layout_below="@+id/create_map_title"
            android:layout_alignRight="@+id/rp_text_view"
            android:layout_alignEnd="@+id/rp_text_view" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>